--- a/examples/Style_backgrounds.html
+++ b/examples/Style_backgrounds.html
@@ -30,7 +30,7 @@
 </style>
 <body>
 <p><a href="../examples.html">← back to examples list</a></p>
-<h1 id="highlighting-text-amond-chapters">CPU-Audio Style example : Styling background</h1>
+<h1>CPU-Audio Style example : Styling background</h1>
 <div id="example1">
 Perhaps you wish to put a non-solid background to the player&nbsp;? Simply define background variables in any alpha-transparency accepted format.
 
