--- a/examples/Theme_big-square.html
+++ b/examples/Theme_big-square.html
@@ -9,7 +9,7 @@
 
 <p><a href="../examples.html">← back to examples list</a></p>
 
-<h1 id="highlighting-text-amond-chapters">CPU-Audio Theme example : Big square button, minimalistic</h1>
+<h1>CPU-Audio Theme example : Big square button, minimalistic</h1>
 
 <p>
 	This theme has only a button on the whole webcmoponent surface. It is intented to be used as standalone, without cpu-controller, playlists or even chapters.
