--- a/examples/Theme_direct-download.html
+++ b/examples/Theme_direct-download.html
@@ -8,7 +8,7 @@
 
 <body>
     <p><a href="../examples.html">← back to examples list</a></p>
-    <h1 id="highlighting-text-amond-chapters">CPU-Audio theme example : Direct download instead of action button</h1>
+    <h1>CPU-Audio theme example : Direct download instead of action button</h1>
 
 <p>You want to change buttons of position, shape or… whatever ? Want to recreate the Winamp classic 2.x theme or port one of the Audion ones ? Yes you can !</p>
 
@@ -41,7 +41,7 @@
         <li>As we re-use the same layout, properties and css variables, <a href="../applications/live_config.html">live_config</a> generated configs can be used</li>
         <li>If the first name of the theme is <q>_</q>, it won't be indexed by git. If you want to keep your theme as private, this is the way to do</li>
         <li>If you want to create a public theme, please avoid external dependencies as in CSS frameworks, or use some fallbacks (as we do for fonts)</li>
-        <li>Your theme will still work with minor release of the versions 7.x.y of cpu-audio. If I change the major version to <q>8</q>, it means themed build may break without ssome changes</li>
+        <li>Your theme will still work with minor release of the versions 7.x.y of cpu-audio. If I change the major version to <q>8</q>, it means themed build may break without some changes</li>
         <li>Some elements, mainly named, are strictly needed. See <q>All named elements in template needed in code</q> in <a href="../tests/test-interface.js">tests/test-interface.js</a>. We try to make some of them optional</li>
         <li>If you do your own private theme, I don't care if you're introducing dependencies, to, by example, a CSS framework, what else</li>
         <li>We don't <a href="../tests">test</a> themed-builds yet. This is a miss, and we need some help there</li>
