--- a/examples/iframe_for_dimension.html
+++ b/examples/iframe_for_dimension.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<!--- This is an included file in FEATURES.md . Do not rename ! -->
+
 	<meta charset="utf-8">
 	<title>CPU-Audio Interface example : Constraigned size via iframe</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
