--- a/examples/Usage_controller_playlist_and_chapters.html
+++ b/examples/Usage_controller_playlist_and_chapters.html
@@ -40,7 +40,7 @@
 	canonical="https://cpu.dascritch.net/post/2019/10/17/Ex0117-%C3%80-la-source-du-son" hide="panels">
 	<audio controls id="ep1" preload="none">
 		<source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0117-CPU%2817-10-19%29.mp3" type="audio/mpeg" />
-        <track kind="chapters" src="../tests-assets/0117-CPU%2817-10-19%29.vtt" default>
+        <track kind="chapters" src="../tests-assets/0117-CPU%2817-10-19%29.vtt" default />
 	</audio>
 </cpu-audio>
 
@@ -52,7 +52,7 @@
 	hide="panels">
 	<audio controls id="ep2" preload="none">
 		<source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0136-CPU%2830-04-20%29.mp3" type="audio/mpeg" />
-        <track kind="chapters" src="../tests-assets/0136-CPU%2830-04-20%29.vtt" default>
+        <track kind="chapters" src="../tests-assets/0136-CPU%2830-04-20%29.vtt" default />
 	</audio>
 </cpu-audio>
 
@@ -64,7 +64,7 @@
 	hide="panels">
 	<audio controls id="ep3" preload="none">
 		<source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0137-CPU%2814-05-20%29.mp3" type="audio/mpeg" />
-        <track kind="chapters" src="../tests-assets/0137-CPU%2814-05-20%29.vtt" default>
+        <track kind="chapters" src="../tests-assets/0137-CPU%2814-05-20%29.vtt" default />
 	</audio>
 </cpu-audio>
 
@@ -76,7 +76,7 @@
 	hide="panels">
 	<audio controls id="ep4" preload="none">
 		<source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0143-CPU%2824-09-20%29.mp3" type="audio/mpeg" />
-        <track kind="chapters" src="../tests-assets/0143-CPU%2824-09-20%29.vtt" default>
+        <track kind="chapters" src="../tests-assets/0143-CPU%2824-09-20%29.vtt" default />
 	</audio>
 </cpu-audio>
 
