Create a "test-all-buttons" theme for dev, debug and testing
Add optionnal buttons to move on chapters and playlist #125

--- a/examples.html
+++ b/examples.html
@@ -6,6 +6,7 @@
 <li><a href='examples/Style_highlight_page_chapters.html'>examples/Style_highlight_page_chapters.html</a></li>
 <li><a href='examples/Theme_big-square.html'>examples/Theme_big-square.html</a></li>
 <li><a href='examples/Theme_direct-download.html'>examples/Theme_direct-download.html</a></li>
+<li><a href='examples/Theme_test-all-buttons.html'>examples/Theme_test-all-buttons.html</a></li>
 <li><a href='examples/Usage_controller_playlist_and_chapters.html'>examples/Usage_controller_playlist_and_chapters.html</a></li>
 <li><a href='examples/Usage_for_streaming.html'>examples/Usage_for_streaming.html</a></li>
 </ul><h2>Applications</h2><ul>
