mechanism prevtrack/nexttrack, easily optimised
Add optionnal buttons to move on chapters and playlist #125

--- a/examples/Theme_test-all-buttons.html
+++ b/examples/Theme_test-all-buttons.html
@@ -8,6 +8,11 @@
 <style>
     cpu-audio {display : inline-block !important;}
 </style>
+<script>
+    document.addEventListener('CPU_ready', ({target}) => {
+        target.CPU.shadow.querySelector('#pagemain #control').addEventListener('click', (e) => { document.CPU.trigger.toggleplay(e); });
+    });
+</script>
 
 <body>
     <p><a href="../examples.html">← back to examples list</a></p>
