--- a/examples.html
+++ b/examples.html
@@ -7,6 +7,7 @@
 <li><a href='examples/Theme_big-square.html'>examples/Theme_big-square.html</a></li>
 <li><a href='examples/Theme_direct-download.html'>examples/Theme_direct-download.html</a></li>
 <li><a href='examples/Theme_test-all-buttons.html'>examples/Theme_test-all-buttons.html</a></li>
+<li><a href='examples/Usage_Controller.html'>examples/Usage_Controller.html</a></li>
 <li><a href='examples/Usage_controller_playlist_and_chapters.html'>examples/Usage_controller_playlist_and_chapters.html</a></li>
 <li><a href='examples/Usage_for_streaming.html'>examples/Usage_for_streaming.html</a></li>
 </ul><h2>Applications</h2><ul>
