--- a/examples/Theme_direct-download.html
+++ b/examples/Theme_direct-download.html
@@ -10,7 +10,7 @@
     <p><a href="../examples.html">← back to examples list</a></p>
     <h1>CPU-Audio theme example : Direct download instead of action button</h1>
 
-<p>You want to change buttons of position, shape or… whatever ? Want to recreate the Winamp classic 2.x theme or port one of the Audion ones ? Yes you can !</p>
+<p>You want to change buttons of position, shape or… whatever ? Want to recreate the Winamp classic 2.x theme or port one of the Audion ones ? Yes you can ! Check [INTERNALS.md](https://github.com/dascritch/cpu-audio/blob/master/INTERNALS.md) more more details</p>
 
     <cpu-audio title="Ex0157 Web, State of the art 2021" canonical="https://cpu.dascritch.net/post/2021/03/11/Ex0157-Web%2C-State-of-the-art-2021" poster="https://cpu.dascritch.net/public/Images/Emissions/.1902-Ex0103-WebStateOfTheArt_s.png" waveform="https://cpu.dascritch.net/public/Sonores/Emissions/waveforms/0157-CPU%2811-03-21%29.png">
         <audio controls="controls" id="emission-0157">
@@ -39,7 +39,7 @@
         <li>The final build should always stay compact, never upper than 200&nbsp;kb. We always try to have a standard build under 50&nbsp;kb</li>
         <li>Please be kind : avoid to many elements and classes, check usability with accessibility features.</li>
         <li>As we re-use the same layout, properties and css variables, <a href="../applications/live_config.html">live_config</a> generated configs can be used</li>
-        <li>If the first name of the theme is <q>_</q>, it won't be indexed by git. If you want to keep your theme as private, this is the way to do</li>
+        <li>If the name of the theme starts with <q>_</q>, it won't be indexed by git. If you want to keep your theme as private, this is the way to do</li>
         <li>If you want to create a public theme, please avoid external dependencies as in CSS frameworks, or use some fallbacks (as we do for fonts)</li>
         <li>Your theme will still work with minor release of the versions 7.x.y of cpu-audio. If I change the major version to <q>8</q>, it means themed build may break without some changes</li>
         <li>Some elements, mainly named, are strictly needed. See <q>All named elements in template needed in code</q> in <a href="../tests/test-interface.js">tests/test-interface.js</a>. We try to make some of them optional</li>
