Other themes needed a rebuild due to refacto

--- a/src/themes/direct-download/template.html
+++ b/src/themes/direct-download/template.html
@@ -4,7 +4,7 @@
 <!--
 	We duplicated the src/thmes/default/template.html to modify it. The others files in the default subdir are used identical
 -->
-<div id="interface" class="no" tabindex="0">
+<div id="interface" tabindex="0">
 	<main>
 		<img id="poster" class="nosmall" src="" alt="" loading="lazy" decoding="async" />
 		<section id="pageerror" role="alert">
