--- a/src/themes/big-square/template.html
+++ b/src/themes/big-square/template.html
@@ -1,4 +1,4 @@
-<div id="interface" class="no" tabindex="0">
+<div id="interface" tabindex="0">
 	<button type="button" id="toggleplay">
 		<img id="poster" class="nosmall" src="" alt="" loading="lazy" decoding="async" />
 		<h5 id="title"><span id="canonical"><!-- title of the track --></span></h5>
