First of all, we will need some tests on `<CPU-controller>`
Create persistent cpu-controller #87

--- a/examples.html
+++ b/examples.html
@@ -17,6 +17,7 @@
 </ul><h2>Tests</h2><ul>
 <li><a href='tests/tests-api.html'>tests/tests-api.html</a></li>
 <li><a href='tests/tests-browser.html'>tests/tests-browser.html</a></li>
+<li><a href='tests/tests-controller.html'>tests/tests-controller.html</a></li>
 <li><a href='tests/tests-interface.html'>tests/tests-interface.html</a></li>
 <li><a href='tests/tests-minimal.html'>tests/tests-minimal.html</a></li>
 </ul>
