--- a/tests/tests-api.html
+++ b/tests/tests-api.html
@@ -27,7 +27,8 @@
 	<ul>
 		<li><a href="./tests-minimal.html">Minimum services, as hash links</a></li>
 		<li><a href="./tests-interface.html">Graphic interface, if WebComponent fully supported</a></li>
-		<li><a href="./tests-api.html">API</a></li>
+		<li><a href="./tests-controller.html">Controller interface</a></li>
+		<li>API</li>
 		<li><a href="./tests-browser.html">Browser compliance and implementation tests</a></li>
 	</ul>
 
