--- a/tests/tests-browser.html
+++ b/tests/tests-browser.html
@@ -22,8 +22,9 @@
 	<ul>
 		<li><a href="./tests-minimal.html">Minimum services, as hash links</a></li>
 		<li><a href="./tests-interface.html">Graphic interface, if WebComponent fully supported</a></li>
+		<li><a href="./tests-controller.html">Controller interface</a></li>
 		<li><a href="./tests-api.html">API</a></li>
-		<li><a href="./tests-browser.html">Browser compliance and implementation tests</a></li>
+		<li>Browser compliance and implementation tests</li>
 	</ul>
 
 	<cpu-audio>
