--- a/tests/tests-controller.html
+++ b/tests/tests-controller.html
@@ -27,17 +27,14 @@
 	</p>
 	<ul>
 		<li><a href="./tests-minimal.html">Minimum services, as hash links</a></li>
-		<li>Graphic interface, if WebComponent fully supported</li>
-		<li><a href="./tests-controller.html">Controller interface</a></li>
+		<li><a href="./tests-interface.html">Graphic interface, if WebComponent fully supported</a></li>
+		<li>Controller interface</li>
 		<li><a href="./tests-api.html">API</a></li>
 		<li><a href="./tests-browser.html">Browser compliance and implementation tests</a></li>
 	</ul>
 
-	<cpu-audio canonical="https://dascritch.net/post/2014/09/03/Timecodehash-%3A-Lier-vers-un-moment-d-un-sonore">
-		<audio id="track" controls="controls" preload="auto" muted="muted">
-			<source src="../tests-assets/blank.mp3" type="audio/mpeg" />
-		</audio>
-	</cpu-audio>
+	<cpu-controller>
+	</cpu-controller>
 
 	<p>
 		<button type="button" id="get_focus">
@@ -54,6 +51,6 @@
 	<div id="qunit"></div>
 	<div id="qunit-fixture"></div>
 	<script src="../node_modules/qunit/qunit/qunit.js"></script>
-	<script src="./tests-interface.js"></script>
+	<script src="./tests-controller.js"></script>
 </body>
 </html>
