--- a/tests/tests-minimal.html
+++ b/tests/tests-minimal.html
@@ -27,8 +27,9 @@
 		See also :
 	</p>
 	<ul>
-		<li><a href="./tests-minimal.html">Minimum services, as hash links</a></li>
+		<li>Minimum services, as hash links</li>
 		<li><a href="./tests-interface.html">Graphic interface, if WebComponent fully supported</a></li>
+		<li><a href="./tests-controller.html">Controller interface</a></li>
 		<li><a href="./tests-api.html">API</a></li>
 		<li><a href="./tests-browser.html">Browser compliance and implementation tests</a></li>
 	</ul>
