Rework on the fail boot
Create persistent cpu-controller #87

--- a/src/themes/test-all-buttons/template.html
+++ b/src/themes/test-all-buttons/template.html
@@ -1,4 +1,4 @@
-<div id="interface" tabindex="0">
+<div id="interface" tabindex="0" class="no">
 	<div class="testing">
 		<h5>This theme is mainly intented for testing purposes</h5>
 		<p>
