--- a/tests/tests-controller.html
+++ b/tests/tests-controller.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-	<p><a href=".">CPU-Audio Webcomponent</a></p>
+	<p><a href="..">CPU-Audio Webcomponent</a></p>
 	<p>
 		This is the graphic interface, working only web the webcomponent is fully supported by the browser.
 	</p>
@@ -31,6 +31,7 @@
 		<li>Controller interface</li>
 		<li><a href="./tests-api.html">API</a></li>
 		<li><a href="./tests-browser.html">Browser compliance and implementation tests</a></li>
+		<li><a href="../examples.html">Back to examples lists</a></li>
 	</ul>
 
 	<cpu-controller>
