--- a/tests/tests-minimal.html
+++ b/tests/tests-minimal.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-	<p><a href=".">CPU-Audio Webcomponent</a></p>
+	<p><a href="..">CPU-Audio Webcomponent</a></p>
 
 	<p>
 		This is the minimal service tests. Your browser should be able to use the hash links, even if the graphical interface don't show up, and the audio player still show the native controls.<br />
@@ -32,6 +32,7 @@
 		<li><a href="./tests-controller.html">Controller interface</a></li>
 		<li><a href="./tests-api.html">API</a></li>
 		<li><a href="./tests-browser.html">Browser compliance and implementation tests</a></li>
+		<li><a href="../examples.html">Back to examples lists</a></li>
 	</ul>
 
 	<cpu-audio>
