--- a/tests/tests-api.html
+++ b/tests/tests-api.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-	<p><a href=".">CPU-Audio Webcomponent</a></p>
+	<p><a href="..">CPU-Audio Webcomponent</a></p>
 
 	<p>
 		This is the API tests. The playeur is not intented to be human-manipulated, so is hidden.
@@ -30,6 +30,7 @@
 		<li><a href="./tests-controller.html">Controller interface</a></li>
 		<li>API</li>
 		<li><a href="./tests-browser.html">Browser compliance and implementation tests</a></li>
+		<li><a href="../examples.html">Back to examples lists</a></li>
 	</ul>
 
 
