--- a/tests/tests-browser.html
+++ b/tests/tests-browser.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-	<p><a href=".">CPU-Audio Webcomponent</a></p>
+	<p><a href="..">CPU-Audio Webcomponent</a></p>
 
 	<p>
 		Those are some browser tests. <strong>Your browser may fail some tests, this is <q>normal</q></strong>, but the webcomponent may work even not degraded.
@@ -25,6 +25,7 @@
 		<li><a href="./tests-controller.html">Controller interface</a></li>
 		<li><a href="./tests-api.html">API</a></li>
 		<li>Browser compliance and implementation tests</li>
+		<li><a href="../examples.html">Back to examples lists</a></li>
 	</ul>
 
 	<cpu-audio>
