--- a/tests/tests-interface.html
+++ b/tests/tests-interface.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-	<p><a href=".">CPU-Audio Webcomponent</a></p>
+	<p><a href="..">CPU-Audio Webcomponent</a></p>
 	<p>
 		This is the graphic interface, working only web the webcomponent is fully supported by the browser.
 	</p>
@@ -31,6 +31,7 @@
 		<li><a href="./tests-controller.html">Controller interface</a></li>
 		<li><a href="./tests-api.html">API</a></li>
 		<li><a href="./tests-browser.html">Browser compliance and implementation tests</a></li>
+		<li><a href="../examples.html">Back to examples lists</a></li>
 	</ul>
 
 	<cpu-audio canonical="https://dascritch.net/post/2014/09/03/Timecodehash-%3A-Lier-vers-un-moment-d-un-sonore">
