test-all-buttons only for controller

--- a/src/themes/test-all-buttons/template.html
+++ b/src/themes/test-all-buttons/template.html
@@ -235,7 +235,7 @@
 		display : none;
 	}
 
-	.mode-default .testing {
+	.mode-default.controller .testing {
 		display : inline-block;
 		background: #333;
 		border : 2px solid black;
