Add HLS sources in examples where available. I have to regenerate some

--- a/examples/Style_highlight_page_chapters.html
+++ b/examples/Style_highlight_page_chapters.html
@@ -76,6 +76,7 @@
 
 <cpu-audio title="Ex0085 Le Mystère Enigma" poster="https://cpu.dascritch.net/public/Images/Emissions/.1805-Ex0085-Enigma_m.jpg" canonical="https://cpu.dascritch.net/post/2018/05/17/Ex0085-Histoires-de-la-cryptographie%2C-2%C3%A8me-partie-%3A-Le-myst%C3%A8re-d-Enigma" twitter="@cpuprogramme">
     <audio id="highlights" data-title="Ex0085 Le Mystère Enigma" data-poster="https://cpu.dascritch.net/public/Images/Emissions/.1805-Ex0085-Enigma_m.jpg" data-canonical="https://cpu.dascritch.net/post/2018/05/17/Ex0085-Histoires-de-la-cryptographie%2C-2%C3%A8me-partie-%3A-Le-myst%C3%A8re-d-Enigma" data-twitter="@cpuprogramme" controls>
+        <!-- source src="https://cpu.dascritch.net/public/Sonores/Emissions/hls/0085-CPU%2817-05-18%29/index.m3u8" type="application/x-mpegurl" / Not existing on server. i'll fix it later  --> 
         <source src="https://dascritch.net/vrac/Emissions/CPU/0085-CPU%2817-05-18%29.ogg" type="audio/ogg">
         <source src="https://dascritch.net/vrac/Emissions/CPU/podcast/0085-CPU%2817-05-18%29.mp3" type="audio/mpeg">
         <track kind="chapters" src="../tests-assets/chapters-ex0085.vtt" default="">
