--- a/examples/Theme_test-all-buttons.html
+++ b/examples/Theme_test-all-buttons.html
@@ -33,7 +33,8 @@
     canonical="https://cpu.dascritch.net/post/2019/10/17/Ex0117-%C3%80-la-source-du-son"
     mode="button" hide="panels">
     <audio controls id="ep1" preload="none">
-        <source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0117-CPU%2817-10-19%29.mp3" type="audio/mpeg" />
+        <source src="https://cpu.dascritch.net/public/Sonores/Emissions/hls/0117-CPU%2817-10-19%29/index.m3u8" type="application/x-mpegurl" /> 
+        <source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0117-CPU%2817-10-19%29.mp3" type="audio/mpeg" data-downloadable />
         <track kind="chapters" src="../tests-assets/0117-CPU%2817-10-19%29.vtt" default />
     </audio>
 </cpu-audio>
@@ -45,7 +46,8 @@
     canonical="https://cpu.dascritch.net/post/2020/04/30/Ex0136-Traitements-du-son"
     mode="button" hide="panels">
     <audio controls id="ep2" preload="none">
-        <source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0136-CPU%2830-04-20%29.mp3" type="audio/mpeg" />
+        <!-- source src="https://cpu.dascritch.net/public/Sonores/Emissions/hls/0136-CPU%2830-04-20%29/index.m3u8" type="application/x-mpegurl" also missing on server  /--> 
+        <source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0136-CPU%2830-04-20%29.mp3" type="audio/mpeg" data-downloadable />
         <track kind="chapters" src="../tests-assets/0136-CPU%2830-04-20%29.vtt" default />
     </audio>
 </cpu-audio>
@@ -57,7 +59,8 @@
     canonical="https://cpu.dascritch.net/post/2020/05/14/Ex0137-Ing%C3%A9nieur-du-son"
     mode="button" hide="panels">
     <audio controls id="ep3" preload="none">
-        <source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0137-CPU%2814-05-20%29.mp3" type="audio/mpeg" />
+        <source src="https://cpu.dascritch.net/public/Sonores/Emissions/hls/0137-CPU%2814-05-20%29/index.m3u8" type="application/x-mpegurl" /> 
+        <source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0137-CPU%2814-05-20%29.mp3" type="audio/mpeg" data-downloadable />
         <track kind="chapters" src="../tests-assets/0137-CPU%2814-05-20%29.vtt" default />
     </audio>
 </cpu-audio>
@@ -69,7 +72,8 @@
     canonical="https://cpu.dascritch.net/post/2020/09/24/Ex0143-Le-son-laser"
     mode="button" hide="panels">
     <audio controls id="ep4" preload="none">
-        <source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0143-CPU%2824-09-20%29.mp3" type="audio/mpeg" />
+        <source src="https://cpu.dascritch.net/public/Sonores/Emissions/hls/0143-CPU%2824-09-20%29/index.m3u8" type="application/x-mpegurl" /> 
+        <source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0143-CPU%2824-09-20%29.mp3" type="audio/mpeg" data-downloadable />
         <track kind="chapters" src="../tests-assets/0143-CPU%2824-09-20%29.vtt" default />
     </audio>
 </cpu-audio>
