--- a/examples/Theme_big-square.html
+++ b/examples/Theme_big-square.html
@@ -25,6 +25,7 @@
 	title="Ex0117 À la source du son"
 	poster="https://cpu.dascritch.net/public/Images/Emissions/1910-Ex0117-SourceDuSon.jpg">
 	<audio controls id="ep1" preload="none">
+		<source src="https://cpu.dascritch.net/public/Sonores/Emissions/hls/0117-CPU%2817-10-19%29/index.m3u8" type="application/x-mpegurl" />
 		<source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0117-CPU%2817-10-19%29.mp3" type="audio/mpeg" />
 	</audio>
 </cpu-audio>
