--- a/examples/Theme_direct-download.html
+++ b/examples/Theme_direct-download.html
@@ -14,6 +14,7 @@
 
     <cpu-audio title="Ex0157 Web, State of the art 2021" canonical="https://cpu.dascritch.net/post/2021/03/11/Ex0157-Web%2C-State-of-the-art-2021" poster="https://cpu.dascritch.net/public/Images/Emissions/.1902-Ex0103-WebStateOfTheArt_s.png" waveform="https://cpu.dascritch.net/public/Sonores/Emissions/waveforms/0157-CPU%2811-03-21%29.png">
         <audio controls="controls" id="emission-0157">
+            <source src="https://cpu.dascritch.net/public/Sonores/Emissions/hls/0157-CPU%2811-03-21%29/index.m3u8" type="application/x-mpegurl" /> 
             <source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0157-CPU%2811-03-21%29.mp3" type="audio/mpeg" data-downloadable />
             
         </audio>
