--- a/examples/Usage_controller_playlist_and_chapters.html
+++ b/examples/Usage_controller_playlist_and_chapters.html
@@ -39,7 +39,8 @@
 	poster="https://cpu.dascritch.net/public/Images/Emissions/.1910-Ex0117-SourceDuSon_s.jpg"
 	canonical="https://cpu.dascritch.net/post/2019/10/17/Ex0117-%C3%80-la-source-du-son" hide="panels">
 	<audio controls id="ep1" preload="none">
-		<source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0117-CPU%2817-10-19%29.mp3" type="audio/mpeg" />
+		<source src="https://cpu.dascritch.net/public/Sonores/Emissions/hls/0117-CPU%2817-10-19%29/index.m3u8" type="application/x-mpegurl" /> 
+        <source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0117-CPU%2817-10-19%29.mp3" type="audio/mpeg" data-downloadable />
         <track kind="chapters" src="../tests-assets/0117-CPU%2817-10-19%29.vtt" default />
 	</audio>
 </cpu-audio>
@@ -63,7 +64,8 @@
 	canonical="https://cpu.dascritch.net/post/2020/05/14/Ex0137-Ing%C3%A9nieur-du-son"
 	hide="panels">
 	<audio controls id="ep3" preload="none">
-		<source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0137-CPU%2814-05-20%29.mp3" type="audio/mpeg" />
+		<source src="https://cpu.dascritch.net/public/Sonores/Emissions/hls/0137-CPU%2814-05-20%29/index.m3u8" type="application/x-mpegurl" /> 
+        <source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0137-CPU%2814-05-20%29.mp3" type="audio/mpeg" data-downloadable />
         <track kind="chapters" src="../tests-assets/0137-CPU%2814-05-20%29.vtt" default />
 	</audio>
 </cpu-audio>
@@ -75,7 +77,8 @@
 	canonical="https://cpu.dascritch.net/post/2020/09/24/Ex0143-Le-son-laser"
 	hide="panels">
 	<audio controls id="ep4" preload="none">
-		<source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0143-CPU%2824-09-20%29.mp3" type="audio/mpeg" />
+		<source src="https://cpu.dascritch.net/public/Sonores/Emissions/hls/0143-CPU%2824-09-20%29/index.m3u8" type="application/x-mpegurl" /> 
+        <source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0143-CPU%2824-09-20%29.mp3" type="audio/mpeg" data-downloadable />
         <track kind="chapters" src="../tests-assets/0143-CPU%2824-09-20%29.vtt" default />
 	</audio>
 </cpu-audio>
