Add some tracks in CPU-Controller example

--- a/examples/Usage_controller.html
+++ b/examples/Usage_controller.html
@@ -29,10 +29,21 @@
 
 <script>
 	const sources = [
-		{src : 'https://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/25-AtHalluFMR%2818-03-15%29.mp3', title : 'micro @HalluFMR #25 : Finance'},
-		{src : 'https://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/26-AtHalluFMR%2825-03-15%29.mp3', title : 'micro @HalluFMR #26 : Brevet'},
-		{src : 'https://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/30-AtHalluFMR%2822-04-15%29.mp3', title : 'micro @HalluFMR #30 : Scam'},
-		{src : 'https://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/31-AtHalluFMR%2829-04-15%29.mp3', title : 'micro @HalluFMR #31 : Vidéo'},
+		{src : 'https://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/8-AtHalluFMR%2822-10-14%29.mp3', title : 'micro @HalluFMR #8 : Accessible (22/10/2014)'},
+		{src : 'https://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/14-AtHalluFMR%2810-12-14%29.mp3', title : 'micro @HalluFMR #14 : Publicité (10/12/2014)'},
+		{src : 'https://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/15-AtHalluFMR%2817-12-14%29.mp3', title : 'micro @HalluFMR #15 : Péritel (17/12/2014)'},
+		{src : 'https://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/16-AtHalluFMR%2807-01-15%29.mp3', title : 'micro @HalluFMR #16 : Conte (07/01/2015)'},
+		{src : 'https://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/21-AtHalluFMR%2818-02-15%29.mp3', title : 'micro @HalluFMR #21 : Sabotage (18/02/2015)'},
+		{src : 'https://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/24-AtHalluFMR%2811-03-15%29.mp3', title : 'micro @HalluFMR #24 : Automobile (11/03/2015)'},
+		{src : 'https://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/25-AtHalluFMR%2818-03-15%29.mp3', title : 'micro @HalluFMR #25 : Finance (18/03/2015)'},
+		{src : 'https://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/26-AtHalluFMR%2825-03-15%29.mp3', title : 'micro @HalluFMR #26 : Brevet (25/03/2015)'},
+		{src : 'https://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/30-AtHalluFMR%2822-04-15%29.mp3', title : 'micro @HalluFMR #30 : Scam (22/04/2015)'},
+		{src : 'https://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/31-AtHalluFMR%2829-04-15%29.mp3', title : 'micro @HalluFMR #31 : Vidéo (29/04/2015)'},
+		{src : 'https://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/35-AtHalluFMR%2820-05-15%29.mp3', title : 'micro @HalluFMR #35 : Dématérialisation (20/05/2015)'},
+		{src : 'https://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/36-AtHalluFMR%2827-05-15%29.mp3', title : 'micro @HalluFMR #36 : Placebo (27/05/2015)'},
+		{src : 'https://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/38-AtHalluFMR%2810-06-15%29.mp3', title : 'micro @HalluFMR #38 : Sensationnel (10/06/2015)'},
+		{src : 'https://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/40-AtHalluFMR%2824-06-15%29.mp3', title : 'micro @HalluFMR #40 : Conditions Générales (24/06/2015)'},
+
 	];
 	let i = 0;
 	const zone = document.querySelector('#zone');
