Regression in focus management

--- a/src/themes/default/template.html
+++ b/src/themes/default/template.html
@@ -1,4 +1,4 @@
-<div id="interface" class="no">
+<div id="interface" class="no" tabindex="-1">
 	<main>
 		<img id="poster" class="nosmall" src="" alt="" loading="lazy" decoding="async" />
 		<section id="pageerror" role="alert">
