Simplify `examples/Usage_controller.html`

--- a/examples/Usage_controller.html
+++ b/examples/Usage_controller.html
@@ -15,16 +15,14 @@
 <h1>CPU-Audio usage example : Usage Controller</h1>
 
     <p>
-        At start, a &lt;cpu-controller&gt; without any valid &lt;cpu-audio&gt; should only be a placeholder.
+        At start, a &lt;cpu-controller&gt; without any valid &lt;cpu-audio&gt; should only be a placeholder.<br />
+        Click to <button type="button" id="add">add a source</button> as many as you want.
     </p>
 
     <cpu-controller hide="poster"></cpu-controller>
 
     <div id="zone">
     </div>
-
-    <button type="button" id="add">Add a source</button>
-
 </body>
 
 <script>
