This example is not working anymore and will be used later
Make static panel with html direct inclusion #173

--- a/examples/API_insert_annotations.html
+++ b/examples/API_insert_annotations.html
@@ -75,6 +75,12 @@ document.addEventListener('CPU_ready', e => {
             link  : 'https://www.classicalmpr.org/blog/classical-notes/2015/12/02/can-silence-be-copyrighted',  // If link is a string, the url is targeted by your point
         });
 
+
+});
+
+</script>
+<script>
+/*
     // What about create a second panel ?
     player_API.addPlane(
         'parameters',
@@ -147,9 +153,7 @@ document.addEventListener('CPU_ready', e => {
         });
 
         // OK. Who still needs a volume and a playrate selector build in the audio player ?
-
-});
-
+*/
 </script>
 
 </body>
