Generate waveform for Samba Resille sound

--- a/examples/iframe_for_dimension.html
+++ b/examples/iframe_for_dimension.html
@@ -11,7 +11,8 @@
 <cpu-audio
 	title="Constrained size"
 	poster="https://dascritch.net/vrac/.blog2/entendu/.1404-SambaResille_m.jpg"
-	canonical="https://dascritch.net/post/2014/04/08/Au-Carnaval-avec-Samba-R%C3%A9sille">
+	canonical="https://dascritch.net/post/2014/04/08/Au-Carnaval-avec-Samba-R%C3%A9sille"
+	waveform="../tests-assets/waveform-sambaresille.png">
 	<audio controls id="iframed">
 		<source src="../tests-assets/blank.mp3" type="audio/mpeg" />
 	</audio>
