Should no more use `<h5>` for title, `<strong id="title">` should be enough

--- a/src/themes/big-square/template.html
+++ b/src/themes/big-square/template.html
@@ -1,7 +1,7 @@
 <div id="interface" class="no" tabindex="-1">
 	<button type="button" id="toggleplay">
 		<img id="poster" class="nosmall" src="" alt="" loading="lazy" decoding="async" />
-		<h5 id="title"><span id="canonical"><!-- title of the track --></span></h5>
+		<strong id="title"><span id="canonical"><!-- title of the track --></span></strong>
 		<div id="control">
 			<!-- play / pause / loading -->
 			<svg id="loading" viewBox="0 0 32 32">
