--- a/src/themes/direct-download/template.html
+++ b/src/themes/direct-download/template.html
@@ -30,7 +30,7 @@
 			</button>
 			<div id="about">
 				<div id="titleline">
-					<h5 id="title"><a href="#" id="canonical" aria-label="${__.canonical}"></a></h5>
+					<strong id="title"><a href="#" id="canonical" aria-label="${__.canonical}"></a></strong>
 					<a id="elapse" aria-label="${__.moment}" tabindex="-1"><span id="currenttime">…</span><span id="totaltime" class="nosmaller"></span></a>
 				</div>
 				<div id="handheld-nav">
