--- a/src/themes/default/template.html
+++ b/src/themes/default/template.html
@@ -25,7 +25,7 @@
 			</button>
 			<div id="about">
 				<div id="titleline">
-					<h5 id="title"><a href="#" id="canonical" aria-label="${__.canonical}"><!-- title of the track --></a></h5>
+					<strong id="title"><a href="#" id="canonical" aria-label="${__.canonical}"><!-- title of the track --></a></strong>
 					<a id="elapse" aria-label="${__.moment}" tabindex="-1"><span id="currenttime">…<!-- elapsed time --></span><span id="totaltime" class="nosmaller"><!-- total time --></span></a>
 				</div>
 				<div id="handheld-nav">
