Adding bare-minimum tests for the global parameter tag
Global parameters inserted via a tag in head host document #185
Being able to not include global.css on host page #181

--- a/tests/tests-api.html
+++ b/tests/tests-api.html
@@ -29,6 +29,7 @@
 		<li><a href="./tests-interface.html">Graphic interface, if WebComponent fully supported</a></li>
 		<li><a href="./tests-controller.html">Controller interface</a></li>
 		<li>API</li>
+		<li><a href="./tests-parameters.html">Parameters in &lt;head&gt; test</a></li>
 		<li><a href="./tests-browser.html">Browser compliance and implementation tests</a></li>
 		<li><a href="../examples.html">Back to examples lists</a></li>
 	</ul>
