--- a/tests/tests-controller.html
+++ b/tests/tests-controller.html
@@ -30,6 +30,7 @@
 		<li><a href="./tests-interface.html">Graphic interface, if WebComponent fully supported</a></li>
 		<li>Controller interface</li>
 		<li><a href="./tests-api.html">API</a></li>
+		<li><a href="./tests-parameters.html">Parameters in &lt;head&gt; test</a></li>
 		<li><a href="./tests-browser.html">Browser compliance and implementation tests</a></li>
 		<li><a href="../examples.html">Back to examples lists</a></li>
 	</ul>
