--- a/tests/tests-interface.html
+++ b/tests/tests-interface.html
@@ -30,6 +30,7 @@
 		<li>Graphic interface, if WebComponent fully supported</li>
 		<li><a href="./tests-controller.html">Controller interface</a></li>
 		<li><a href="./tests-api.html">API</a></li>
+		<li><a href="./tests-parameters.html">Parameters in &lt;head&gt; test</a></li>
 		<li><a href="./tests-browser.html">Browser compliance and implementation tests</a></li>
 		<li><a href="../examples.html">Back to examples lists</a></li>
 	</ul>
