Add FLAC format

--- a/applications/live_config.html
+++ b/applications/live_config.html
@@ -47,6 +47,7 @@
 				<option value="application/dash+xml">DASH .mpd</option>
 				<option value="application/x-mpegurl">HLS .m3u8</option>
 				<option value="audio/wav">WAV</option>
+				<option value="audio/flac">FLAC</option>
 			</select> sound file
 		</span>
 		<input id="source_1" name="source_1" type="url" value="https://dascritch.net/vrac/sonores/1404-SambaResille2003.ogg" placeholder="https://example.com/sound.ogg" />
@@ -61,6 +62,7 @@
 				<option value="application/dash+xml">DASH .mpd</option>
 				<option value="application/x-mpegurl">HLS .m3u8</option>
 				<option value="audio/wav">WAV</option>
+				<option value="audio/flac">FLAC</option>
 			</select> sound file
 		</span>
 		<input id="source_2" name="source_2" type="url" value="https://dascritch.net/vrac/sonores/podcast/1404-SambaResille2003.mp3" placeholder="https://example.com/sound.mp4" />
@@ -75,6 +77,7 @@
 				<option value="application/dash+xml">DASH .mpd</option>
 				<option value="application/x-mpegurl">HLS .m3u8</option>
 				<option value="audio/wav">WAV</option>
+				<option value="audio/flac">FLAC</option>
 			</select> sound file
 		</span>
 		<input id="source_3" name="source_3" type="url" placeholder="https://example.com/sound.mp3" />
